# paisa_vasool_custom_api_gateway

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  id_ed25519_official  id_ed25519_official.pub  main.py  nginx.conf  pyproject.toml  requirements.txt
src/: main.py
src/api/rest/middleware/: logging_middleware.py
src/api/rest/routes/: __init__.py  gateway.py  health.py
src/config/: settings.py
src/core/: clients.py
src/core/exceptions/: __init__.py
src/observability/logging/: logger.py
